// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two and two - small 1`] = `
Array [
  <div
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-1
      </div>
    </div>
    <div
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-2
      </div>
    </div>
  </div>,
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />,
  <div>
    <div>
      support-1
    </div>
  </div>,
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />,
  <div>
    <div>
      support-2
    </div>
  </div>,
]
`;

exports[`2. secondary two and two - medium 1`] = `
<div
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "10px",
      "marginRight": "10px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-1
      </div>
    </div>
    <div
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-2
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        support-1
      </div>
    </div>
    <div
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        support-2
      </div>
    </div>
  </div>
</div>
`;
